[package]
name = "gaussian_process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
csv = "1.1.6"
friedrich = { version = "0.4.1", features = ["friedrich_serde"] }
plotters = "0.3.1"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
